# beaglepy

./: .clang-format  .travis.yml  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_linux_with_conda.yml
docs/: beaglepy.rst  conf.py  index.rst
notebooks/: comparison.ipynb
src/: beagle.cpp
src/beaglepy/: __init__.py  _version.py  beagle.cpp  exception.hpp  utils.py
tests/: test_basic.py  test_functions.py  test_tiny.py
