[metadata]
name = beaglepy
url = https://github.com/4ment/beaglepy
author = Mathieu Fourment
author_email = mathieu.fourment@uts.edu.au
keywords = phylogenetics, BEAGLE, pybind11
description = Python binding for beagle
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    cpplint
    flake8
    isort
    pylint
test =
    pytest
    numpy

[flake8]
max-line-length = 88
ignore = E203, W503
